# spirit-island-card-katalog

./: .gitattributes  .gitignore  LICENSE-MIT  README.md  cards.ts  genflex.py  index.html  search.xml  style.css  tsconfig.json
compare-card-text/: .gitignore  Cargo.toml
compare-card-text/src/: main.rs
imgsprep/: .gitignore  clean  clean-pdf  convert  convert-pdf  extract  rename-pdf.py  rename.py
imgsprep/old-versions/pdfs/: convert
imgsprep/scans/: convert-scans  multicrop
res/: flex.css  style.css
src/: cards.ts  db.ts  filter-compiled.ts  filter-old.ts  filter.ts  lexer.ts  main.ts  parser.ts  types.ts
