[package]
name = "compare-card-text"
version = "0.1.0"
authors = ["oberien <jaro.fietz@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3.1"
deno_core = "0.70.0"
serde_json = "1.0.60"
regex = "1.4.2"
unicode-segmentation = "1.7.1"
